<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_gravity="center"
    android:layout_height="wrap_content"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="15dp"
        >
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="40dp"
            android:gravity="top"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/item"
                android:textStyle="bold"
                android:layout_marginStart="15dp"
                android:textSize="15sp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/price"
                android:textStyle="bold"
                android:layout_marginStart="35dp"
                android:textSize="15sp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/vat"
                android:textStyle="bold"
                android:layout_marginStart="55dp"
                android:textSize="15sp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/actual_price"
                android:textStyle="bold"
                android:layout_marginStart="65dp"
                android:textSize="15sp"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="49dp"
            android:orientation="horizontal"
            >
            <Button
                android:id="@+id/milk_button"
                android:layout_width="95dp"
                android:layout_height="48dp"
                android:text="@string/milk"
                />

            <TextView
                android:id="@+id/milkPrice"
                android:layout_width="60dp"
                android:layout_height="27dp"
                android:background="@drawable/textview_box"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                />

            <TextView
                android:id="@+id/milkVat"
                android:layout_width="60dp"
                android:layout_height="27dp"
                android:background="@drawable/textview_box"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                />

            <TextView
                android:id="@+id/milkActualPrice"
                android:layout_width="60dp"
                android:layout_height="27dp"
                android:background="@drawable/textview_box"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="49dp"
            android:orientation="horizontal"
            >
            <Button
                android:id="@+id/sugar_button"
                android:layout_width="95dp"
                android:layout_height="48dp"
                android:text="@string/sugar"
                />

            <TextView
                android:id="@+id/sugarPrice"
                android:layout_width="60dp"
                android:layout_height="27dp"
                android:background="@drawable/textview_box"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                />

            <TextView
                android:id="@+id/sugarVat"
                android:layout_width="60dp"
                android:layout_height="27dp"
                android:background="@drawable/textview_box"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                />

            <TextView
                android:id="@+id/sugarActualPrice"
                android:layout_width="60dp"
                android:layout_height="27dp"
                android:background="@drawable/textview_box"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="49dp"
            android:orientation="horizontal"
            >
            <Button
                android:id="@+id/flour_button"
                android:layout_width="95dp"
                android:layout_height="48dp"
                android:text="@string/flour"
                />

            <TextView
                android:id="@+id/flourPrice"
                android:layout_width="60dp"
                android:layout_height="27dp"
                android:background="@drawable/textview_box"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                />

            <TextView
                android:id="@+id/flourVat"
                android:layout_width="60dp"
                android:layout_height="27dp"
                android:background="@drawable/textview_box"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                />

            <TextView
                android:id="@+id/flourActualPrice"
                android:layout_width="60dp"
                android:layout_height="27dp"
                android:background="@drawable/textview_box"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="49dp"
            android:orientation="horizontal"
            >
            <Button
                android:id="@+id/bread_button"
                android:layout_width="95dp"
                android:layout_height="48dp"
                android:text="@string/bread"
                />

            <TextView
                android:id="@+id/breadPrice"
                android:layout_width="60dp"
                android:layout_height="27dp"
                android:background="@drawable/textview_box"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                />

            <TextView
                android:id="@+id/breadVat"
                android:layout_width="60dp"
                android:layout_height="27dp"
                android:background="@drawable/textview_box"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                />

            <TextView
                android:id="@+id/breadActualPrice"
                android:layout_width="60dp"
                android:layout_height="27dp"
                android:background="@drawable/textview_box"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                />
        </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="49dp"
        android:orientation="horizontal"
        >
        <Button
            android:id="@+id/grandtotal_button"
            android:layout_width="150dp"
            android:layout_height="48dp"
            android:text="@string/grand_total"
            />
        <TextView
            android:id="@+id/grandTotal"
            android:layout_width="200dp"
            android:layout_height="27dp"
            android:background="@drawable/textview_box"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            />
    </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="49dp"
            android:orientation="horizontal"
            >
            <Button
                android:id="@+id/discount_button"
                android:layout_width="150dp"
                android:layout_height="48dp"
                android:text="@string/discount"
                />
            <TextView
                android:id="@+id/discount"
                android:layout_width="200dp"
                android:layout_height="27dp"
                android:background="@drawable/textview_box"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="49dp"
            android:orientation="horizontal"
            >
            <Button
                android:id="@+id/netpay_button"
                android:layout_width="150dp"
                android:layout_height="48dp"
                android:text="@string/net_pay"
                />
            <TextView
                android:id="@+id/netPay"
                android:layout_width="200dp"
                android:layout_height="27dp"
                android:background="@drawable/textview_box"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                />
        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>